dev/test_programs/INVALID/group5/scanner_literal_rune_unescaped.go
package scanner_literal_rune_unescaped

// We want a ' in a character but forgot to escape \'
var r rune = '''

